--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -16,13 +16,13 @@
                         {% if fotografia.foto == "" or fotografia.foto == null %}
                         <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/notfound.png' %}">
                         {% else %}
-                            <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
+                            <img class="imagem__imagem" src="{{ fotografia.foto.url }}" alt="foto">
                         {% endif %}
                         <div class="imagem__info">
                             <div class="imagem__texto">
                                 <p class="imagem__titulo">{{ fotografia.nome }}</p>
                                 <p class="imagem__descricao">{{ fotografia.legenda }}</p>
-                                <p class="imagem__texto"></p>
+                                <p class="imagem__texto">{{ fotografia.descricao }}</p>
                             </div>
                         </div>
                     </div>
